Viewer node causes crash #37525

Closed
opened 2013-11-18 19:43:37 +01:00 by Matthew Joyce · 6 comments

System Information
Arch linux (64-bit) with KDE on MacBook Air 2013
Has 8 GB of RAM, 128GB flash storage, 13-inch screen, 1.3GHz dual-core Intel Core i7, Intel HD Graphics 5000

Blender Version
Broken:
Blender 2.69 from buildbot ( blender-2.69-r61240-linux-glibc211-x86_64.tar.bz2)
Blender 2.68 from blender website (blender-2.68a)
Blender built from git
Blender from arch repo (2.69)

Worked: Haven't found any working versions

Short description of error
Segmentation fault after adding viewer node

Exact steps for others to reproduce the error
Open following .blend file

crash.blend

Pressing render results in crash.
This file can be created by opening the default file, going to the compositor, turning on nodes and adding a viewer node attached to the render result node.
The crash can also be created by loading the default file, going to the compositor, turning on nodes and backdrop, then adding a viewer node (without rendering).
Could not reproduce the bug on OSX Mavericks.

Extra data
Blender generated crash file:
crash.crash.txt
GDB thread apply all bt full
crash.txt

**System Information** Arch linux (64-bit) with KDE on MacBook Air 2013 Has 8 GB of RAM, 128GB flash storage, 13-inch screen, 1.3GHz dual-core Intel Core i7, Intel HD Graphics 5000 **Blender Version** Broken: Blender 2.69 from buildbot ( blender-2.69-r61240-linux-glibc211-x86_64.tar.bz2) Blender 2.68 from blender website (blender-2.68a) Blender built from git Blender from arch repo (2.69) Worked: Haven't found any working versions **Short description of error** Segmentation fault after adding viewer node **Exact steps for others to reproduce the error** Open following .blend file [crash.blend](https://archive.blender.org/developer/F28513/crash.blend) Pressing render results in crash. This file can be created by opening the default file, going to the compositor, turning on nodes and adding a viewer node attached to the render result node. The crash can also be created by loading the default file, going to the compositor, turning on nodes and backdrop, then adding a viewer node (without rendering). Could not reproduce the bug on OSX Mavericks. **Extra data** Blender generated crash file: [crash.crash.txt](https://archive.blender.org/developer/F28512/crash.crash.txt) GDB thread apply all bt full [crash.txt](https://archive.blender.org/developer/F28514/crash.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @matsjoyce

Added subscriber: @matsjoyce

Added subscriber: @nucandrei

Added subscriber: @nucandrei
Sergey Sharybin self-assigned this 2013-11-19 08:20:37 +01:00

Any chance you can grab 1e479d1722 from the git repository and build it by self? I've fixed one issue which might potentially be a source of crash in your case.

Any chance you can grab 1e479d1722 from the git repository and build it by self? I've fixed one issue which might potentially be a source of crash in your case.
Author

Seems to work now, thanks!

Seems to work now, thanks!
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37525
No description provided.