Potential fix for T37525: Viewer node causes crash

LOCK_DRAW_IMAGE used to be unlocked twice. Now made it
so all the thread-unsafe code is inside a single lock/
unlock section.